@@ -14,6 +14,7 @@
 Фичи
 ----
 
+* таймаут для dvr_writer
 * хранение метадаты в архиве
 * задизайнить в HLS: внешний поток ключей, drm, что-то ещё
 * добавить к архиву кеш открытых файлов
